<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">我的笔记</string>
    <string name="input_hint">请输入笔记内容...</string>
    <string name="add_image">添加图片</string>
    <string name="submit">提交</string>
    <string name="search_hint">搜索笔记...</string>
    <string name="filter">筛选</string>
    <string name="search">搜索</string>
    <string name="clear">清空</string>
    <string name="export">导出</string>
    <string name="statistics">统计</string>
    <string name="back">返回</string>
    <string name="splash_subtitle">记录美好生活</string>
    <string name="statistics_title">数据统计</string>
    <string name="total_notes">总笔记数</string>
    <string name="zero">0</string>
    <string name="category_ratio">分类占比</string>
    <string name="top">置顶</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="note_image">笔记图片</string>
    <string name="total_count">%d</string>
    <string name="count_format">%d 条</string>
    <string name="cancel_top">取消置顶</string>
    <string name="splash_name">姚姜君202305100205</string>
    <string name="category_format">分类：%s</string>
    <!-- 置顶相关 -->
    <string name="top_tag">置顶</string>
</resources>