<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="267dp"
        android:layout_height="196dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="66sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_subtitle"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/splash_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</LinearLayout>